--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
  <head>
   <link href="https://fonts.googleapis.com/css?family=Aref+Ruqaa" rel="stylesheet">
-  <link href="styles/style.css" rel="stylesheet" type="text/css">
+  <link href="style.css" rel="stylesheet" type="text/css">
   </style>
   <meta charset="utf-8">
   <title>Name is Franka</title>
@@ -14,10 +14,10 @@
   <ul>
      <li><a>Waking up</a></li>
      <li><a>More waking up</a></li>
-     <li><a href="images/kot.png">Sleeping</a></li>
+     <li><a href="kot.png">Sleeping</a></li>
   </ul>
   <p>In the morning I <strong>wake up</strong></p>
-  <img id="Foto1" src="images/kot.png" alt="Test image">
-  <script src="scripts/main.js"></script>
+  <img id="Foto1" src="kot.png" alt="Test image">
+  <script src="main.js"></script>
  </body>
 </html>
