--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <ul>
      <li><a>Waking up</a></li>
      <li><a>More waking up</a></li>
-     <li><a href="kot.png">Sleeping</a></li>
+     <li><a href="dock.html">Sleeping</a></li>
   </ul>
   <p>In the morning I <strong>wake up</strong></p>
   <img id="Foto1" src="kot.png" alt="Test image">
