add color and top margin to left column

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 
 <body>
   <div class="columns">
-    <div class="column is-narrow">
-      <section class="card" id="bio" style="position: sticky; top: 0;">
+    <div class="column is-narrow has-background-primary-dark">
+      <section class="card" id="bio" style="position: sticky; top: 5px;">
         <div class="card-content">
           <p class="title is-4 has-text-centered">Maciej Migdał</p>
           <div class="icon-text">
