remove fixed columns height

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-  <div class="columns" style="height: 150vh">
+  <div class="columns">
     <div class="column is-narrow has-background-primary-dark">
       <section class="card" id="bio" style="position: sticky; top: 5px;">
         <div class="card-content">
