--- a/index.html
+++ b/index.html
@@ -34,6 +34,12 @@
             </span>
             <a href="https://www.linkedin.com/in/mcjmigdal">in/mcjmigdal</a>
           </div>
+          <div class="icon-text">
+            <span class="icon">
+              <i class="fas fa-brands fa-orcid"></i>
+            </span>
+            <a href="https://orcid.org/0000-0002-8021-7263">orcid.org</a>
+          </div>
         </div>
       </section>
     </div>
@@ -59,7 +65,7 @@
       </section>
 
       <section id="projects" class="section">
-        <h1 class="title">Projects</h1>
+        <h1 class="title">Open source projects</h1>
 
         <div class="tile is-ancestor">
           <div class="tile is-parent is-vertical">
@@ -159,8 +165,8 @@
             <p class="title">shiitake</p>
             <div class="content has-text-justified"
               <p>
-                Mini-project, automating Shiitake mushrooms growth conditions monitoring 
-                and taking pictures with Raspberry Pi.
+                Mini-project, automatizing Shiitake mushrooms growth monitoring 
+                using Raspberry Pi and Raspberry Pi Camera.
               </p>
             </div>
             <figure class="image is-flex is-justify-content-center">
@@ -183,15 +189,15 @@
         </div>
       </section>
 
-      <section id="projects" class="section">
+      <section id="projects" class="section content">
         <h1 class="title">Publications</h1>
         <ul>
-          <li>Migdał, M., Arakawa, T., Takizawa, S., Furuno, M., Suzuki, H., Arner, E., Winata, C.L., and Kaczkowski, B. 2023. xcore: an R package for inference of gene expression regulators. BMC Bioinformatics. 24:14. doi:https://doi.org/10.1186/s12859-022-05084-0.</li>
-         <li>Uszczynska-Ratajczak, B., Sugunan, S., Kwiatkowska, M., Migdal, M., Carbonell-Sala, S., Sokol, A., Winata, C.L., and Chacinska, A. 2022. Profiling subcellular localization of nuclear-encoded mitochondrial gene products in zebrafish. Life Sci. Alliance. 6:e202201514. doi:https://doi.org/10.26508/lsa.202201514.</li>
-         <li>Migdał, M., Tralle, E., Abu Nahia, K., Bugajski, Ł., Kędzierska, K.Z., Garbicz, F., Piwocka, K., Winata, C.L., and Pawlak, M. 2021. Multi-omics analyses of early liver injury reveals cell-type-specific transcriptional and epigenomic shift. BMC Genomics. 22:904. doi:https://doi.org/10.1186/s12864-021-08173-1.</li>
-         <li>Abu Nahia, K., Migdał, M., Quinn, T.A., Poon, K., Łapiński, M., Sulej, A., Liu, J., Mondal, S.S., Pawlak, M., Bugajski, Ł., Piwocka, K., Brand, T., Kohl, P., Korzh, V., and Winata, C. 2021. Genomic and physiological analyses of the zebrafish atrioventricular canal reveal molecular building blocks of the secondary pacemaker region. Cell. Mol. Life Sci.. 78:6669-6687. doi:https://doi.org/10.1007/s00018-021-03939-y.</li>
-         <li>Migdal, M., Ruan, D.F., Forrest, W.F., Horowitz, A., and Hammer, C. 2021. MiDAS—Meaningful Immunogenetic Data at Scale. PLoS Comput Biol. 17:e1009131. doi:https://doi.org/10.1371/journal.pcbi.1009131.</li>
-         <li>Pawlak, M., Kedzierska, K.Z., Migdal, M., Nahia, K.A., Ramilowski, J.A., Bugajski, L., Hashimoto, K., Marconi, A., Piwocka, K., Carninci, P., and Winata, C.L. 2019. Dynamics of cardiomyocyte transcriptome and chromatin landscape demarcates key events of heart development. Genome Res.. 29:506-519. doi:https://doi.org/10.1101/gr.244491.118.</li>
+          <li>Migdał, M., Arakawa, T., Takizawa, S., Furuno, M., Suzuki, H., Arner, E., Winata, C.L., Kaczkowski, B. xcore: an R package for inference of gene expression regulators. BMC Bioinformatics. 2023. 24:14. doi: https://doi.org/10.1186/s12859-022-05084-0</li>
+          <li>Uszczynska-Ratajczak, B., Sugunan, S., Kwiatkowska, M., Migdal, M., Carbonell-Sala, S., Sokol, A., Winata, C.L., Chacinska, A. Profiling subcellular localization of nuclear-encoded mitochondrial gene products in zebrafish. Life Sci. Alliance. 2022. 6:e202201514. doi: https://doi.org/10.26508/lsa.202201514</li>
+          <li>Migdał, M., Tralle, E., Abu Nahia, K., Bugajski, Ł., Kędzierska, K.Z., Garbicz, F., Piwocka, K., Winata, C.L., Pawlak, M. Multi-omics analyses of early liver injury reveals cell-type-specific transcriptional and epigenomic shift. BMC Genomics. 2021. 22:904. doi: https://doi.org/10.1186/s12864-021-08173-1</li>
+          <li>Abu Nahia, K., Migdał, M., Quinn, T.A., Poon, K., Łapiński, M., Sulej, A., Liu, J., Mondal, S.S., Pawlak, M., Bugajski, Ł., Piwocka, K., Brand, T., Kohl, P., Korzh, V., Winata, C. Genomic and physiological analyses of the zebrafish atrioventricular canal reveal molecular building blocks of the secondary pacemaker region. Cell. Mol. Life Sci.. 2021. 78:6669-6687. doi: https://doi.org/10.1007/s00018-021-03939-y</li>
+          <li>Migdal, M., Ruan, D.F., Forrest, W.F., Horowitz, A., Hammer, C. MiDAS—Meaningful Immunogenetic Data at Scale. PLoS Comput Biol. 2021. 17:e1009131. doi: https://doi.org/10.1371/journal.pcbi.1009131</li>
+          <li>Pawlak, M., Kedzierska, K.Z., Migdal, M., Nahia, K.A., Ramilowski, J.A., Bugajski, L., Hashimoto, K., Marconi, A., Piwocka, K., Carninci, P., Winata, C.L. Dynamics of cardiomyocyte transcriptome and chromatin landscape demarcates key events of heart development. Genome Res.. 2019. 29:506-519. doi: https://doi.org/10.1101/gr.244491.118</li>
         </ul>
       </section>
     </div>
