update about me

--- a/index.html
+++ b/index.html
@@ -49,18 +49,30 @@
       <section id="aboutme" class="section">
         <h1 class="title">Hi, I'm Migdał</h1>
         <div class="content has-text-justified">
-          <p>
-            My main professional interest is application of statistical methods
-            and programming in data analysis of hight throughput biological 
-            experiments. Especially I am interested in working with 
-            Next-Generation Sequencing (NGS) data from experiments such as 
-            ATAC-seq and RNA-seq, and elucidating interactions between chromatin 
-            structure and gene expression. 
-          </p>
-          <p>
-            My personal goal is to further grow as a bioinformatician and 
-            programmer to became more proficient scientists.
-          </p>
+        <p>
+            I am a dedicated bioinformatician and programmer. I have a deep interest 
+            in using machine learning techniques to unlock insights hidden in 
+            high-throughput data. I specialize in processing and analyzing 
+            Next-Generation Sequencing (NGS) data, especially those derived from 
+            experiments like ATAC-seq and RNA-seq. Driven by a passion to innovate, 
+            I enjoy expanding my skills to use and understand emerging technologies.
+        </p>
+        <p>
+            Currently, I am at the culmination of a journey to obtain a PhD degree in 
+            molecular biology at the <a href="zdglab.iimcb.gov.pl">IIMCB</a>. 
+            My research focuses on the dynamics of gene regulation during heart development 
+            <i>in vivo</i>.
+        </p>
+        <p>
+            Beyond my academic pursuits, I engage in diverse projects and consultancy work.
+            I am proficient in R and Python programming and have experience in developing 
+            data analysis workflows. My expertise extends to Linux server administration, 
+            web application development, Excel automation, Raspberry Pi projects, and much more.
+        </p>
+        <p>
+            If you face a challenge which requires a blend of technical expertise and biological
+            insight, or if you need assistance in IT-related areas, do not hesitate to contact me.
+        </p>
         </div>
       </section>
 
