add background image by Idzu

--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 
 <body>
   <div class="columns">
-    <div class="column is-narrow has-background-primary-dark">
+
+    <div class="column is-narrow" style="background: url('rect5216.png') repeat right; background-size: contain;">
       <section class="card" id="bio" style="position: sticky; top: 5px;">
         <div class="card-content">
           <p class="title is-4 has-text-centered">Maciej Migdał</p>
@@ -214,6 +215,14 @@
       </section>
     </div>
   </div>
+
+  <footer class="footer">
+    <div class="content has-text-left">
+        <a rel="license" href="http://creativecommons.org/licenses/by-nc-nd/4.0/">
+            <img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-nd/4.0/88x31.png" /></a><br />
+            Background image is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc-nd/4.0/">Creative Commons Attribution-NonCommercial-NoDerivatives 4.0 International License
+        </a>.
+    </div>
 </body>
 
 </html>
