fix wheater station project

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
            </article>
 
            <article id="wheatherstation" class="tile is-child box is-clickable"
-               onclick="window.open('', '_blank')">
+               onclick="window.open('https://github.com/mcjmigdal/weather-station-esp32', '_blank')">
              <p class="title">Wheather station</p>
              <div class="content has-text-justified"
                <p class="has-text-justified">
@@ -127,7 +127,7 @@
                </p>
              </div>
              <figure class="image is-flex is-justify-content-center">
-                 <img src="https://github.com/mcjmigdal/weather-station-esp32/station.png"
+                 <img src="https://raw.githubusercontent.com/mcjmigdal/weather-station-esp32/master/station.png"
                       style="width: 50%; height: auto" alt=""
                  >
              </figure>
