add fasta validator gist to projects

--- a/index.html
+++ b/index.html
@@ -187,6 +187,16 @@
              </figure>
            </article>
 
+           <article id="js_fasta_validator" class="tile is-child box is-clickable"
+               onclick="window.open('https://gist.github.com/mcjmigdal/56407315d30a2252325517d0a278ae2c', '_blank')">
+             <p class="title"></p>
+             <div class="content has-text-justified"
+               <p>
+                 JavaScript FASTA format validator
+               </p>
+             </div>
+           </article>
+
            </div>
          </div>
        </section>
