--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
               <span class="icon">
                 <i class="fas fa-regular fa-envelope"></i>
               </span>
-              <span>mcjmigdal[at]gmail.com</span>
+              <span>maciej.migdal[at]bioinnowacje.com</span>
             </div>
             <div class="navbar-item icon-text">
               <span class="icon">
